# pypackage_template

./: cookiecutter.json
{{cookiecutter.project_name_snake}}/: .pre-commit-config.yaml  azure-pipelines-publish.yml  pyproject.toml
{{cookiecutter.project_name_snake}}/tests/: test_{{cookiecutter.project_name_snake}}.py
{{cookiecutter.project_name_snake}}/{{cookiecutter.project_name_snake}}/: console.py
{{cookiecutter.project_slug}}/: README.md  azure-pipelines-publish.yml  azure-pipelines.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
