[tool.poetry]
name = "{{cookiecutter.project_name_snake}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
keyring = "^23.5.0"
artifacts-keyring = "^0.3.1"
twine = "^3.8.0"
click = "^8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
hello = '{{cookiecutter.project_name_snake}}.console:hello'